# target-airwallex

./: README.md  pyproject.toml
target_airwallex/: auth.py  client.py  sinks.py  target.py
